small style tweaks, and attempt to fix spacing on desktop

--- a/less/style.less
+++ b/less/style.less
@@ -1732,7 +1732,7 @@ h2.stuckHead {
 .single-list .listHero h1, .single-list .listHero h3 {
 	padding: 0;
 }
-
+ 
 // .listItem:first-child {
 //   height: auto;
 // }
@@ -1740,7 +1740,7 @@ h2.stuckHead {
 .listHero {
 	display: block;
 	width: 100%;
-	height: 70vh;
+	height: 60vh;
 	padding: 0;
 
 	background-repeat: no-repeat;
@@ -1755,7 +1755,7 @@ html.touch .listHero {
 
 .listHeader {
 	position: relative;
-	padding: 40vh 15px 15px 15px;
+	padding: 30vh 15px 15px 15px;
 	left: 0px;
 }
 
